Remove absolute path

--- a/singlephasedet.tex
+++ b/singlephasedet.tex
@@ -9,7 +9,7 @@ The far detector for the DUNE collaboration will be a series of four liquid argo
 \centering
 \begin{minipage}[b]{1.0\textwidth}
 \begin{center}
-\includegraphics[width=.75\textwidth]{./figures/fardet-3D.png}
+\includegraphics[width=.75\textwidth]{figures/fardet-3D.png}
 %\includegraphics[width=0.7\textwidth]{EndView-sketch.png}
 \end{center}
 \end{minipage}
@@ -27,7 +27,7 @@ The goals of the DUNE detector test can be broken into four categories: argon co
 \centering
 \begin{minipage}[b]{1.0\textwidth}
 \begin{center}
-\includegraphics[width=.75\textwidth]{./figures/TPC-3D-section.jpg}
+\includegraphics[width=.75\textwidth]{figures/TPC-3D-section.jpg}
 \end{center}
 \end{minipage}
 \caption{\small 3D model of the single-phase detector prototype is shown inside the test cryostat.}
