Remove absolute path

--- a/APA-CP-FieldCage.tex
+++ b/APA-CP-FieldCage.tex
@@ -10,8 +10,8 @@
 \centering
 \begin{minipage}[b]{1.0\textwidth}
 \begin{center}
-\includegraphics[width=.75\textwidth]{./figures/TPC_APA_1}
-\includegraphics[width=0.75\textwidth]{./figures/TPC_APA_2}
+\includegraphics[width=.75\textwidth]{figures/TPC_APA_1}
+\includegraphics[width=0.75\textwidth]{figures/TPC_APA_2}
 \end{center}
 \end{minipage}
 \caption{Clockwise from left: A full size APA, an APA corner showing the electronics boards, an APA lower corner photo showing wires and edge boards, and a figure showing the wire orientations and the placement of wire aligning combs. }
