--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -18,7 +18,7 @@
 \usepackage{color}
 
 %% draftwatermark causes infinite loop on SL6's ancient TeXLive
-%\usepackage[firstpage]{draftwatermark}
+\usepackage[firstpage]{draftwatermark}
 \usepackage{lipsum}
 \usepackage{tikz}
 
@@ -43,19 +43,20 @@
 \title{  Proposal for a Full-Scale Detector Engineering Test and Test Beam Calibration of a Single-Phase LAr TPC}
 
 \date{\today}
+\date{April 15, 2015}
 	\input{authors}
 
 \maketitle
 
 
-%\SetWatermarkText{DRAFT}
-%\SetWatermarkLightness{0.8}
-%\SetWatermarkScale{5}
+\SetWatermarkText{DRAFT}
+\SetWatermarkLightness{0.8}
+\SetWatermarkScale{5}
 
 
 \begin{abstract}
 
-After a short introduction to the ELBNF physics program we motivate the proposed single phase liquid argon detector and charged particle beam measurement program. 
+After a short introduction to the DUNE physics program we motivate the proposed single phase liquid argon detector and charged particle beam measurement program. 
 We describe the required beam line and beam monitoring instrumentation for the project.
 The proposed single phase liquid argon detector presently described corresponds to the LBNE detector design. Discussions about alternate designs are in progress and this proposal will be updated according to a developing consensus on the detector design. The detector will be placed inside a membrane cryostat which will be connected to a cryogenics systems for which we provide engineering details. The proposal concludes with a description of data handling and analysis plans, as well as a schedule and an overview of the organizational structure put in place to execute the plan.
 
