--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -104,16 +104,15 @@ in the few-GeV to sub-GeV range provided charged-particle test beams.
 %\subsubsection{Particles energy and direction}
 %\label{detbeam_particles}
 The DUNE experiment will run beam in both neutrino and anti-neutrino 
-configurations. These beams will be composed  mainly of muon neutrinos (anti-neutrinos) as well as electron neutrinos (anti-neutrinos). In Fig. \ref{fig:particle_momenta} the distributions of momenta and angles of particles created in neutrino interactions from simulated beam fluxes are shown. 
+configurations. These beams will be composed  mainly of muon neutrinos (anti-neutrinos) as well as electron neutrinos (anti-neutrinos). In Fig. \ref{fig:particle_momenta} the distributions of momenta and angles of particles created in neutrino interactions from simulated beam fluxes are shown. The rate on the particles are calculated for the 34kton far detector and  are combine from both neutriono and anti-neutrino beams. In addition the electron rates from charged current interactions for muon neutrinos oscillated to electron neutrinos are showed. 
 \begin{figure}[h!]
   \centering
-\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/True_Momenta_per_Particle}
-\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/True_theta_per_Particle}
+\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/True_Momenta_per_Particle_9_2_1_0_log}
+\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/True_theta_per_Particle_9_2_1_0_lin}
 \label{fig:particle_momenta}
   \caption{Particle momenta (left) and angular (right) distributions for particles produced in neutrino interactions 
 from $\nu_e$, $\nu_\mu$, $\bar \nu_e$ and $\bar \nu_\mu$ at the far detector location.
-{\color{red}
-Want y-log scale version - combine e+e-, fix mu, improve information content (y-axis, change colors, etc )
+{\color{red}  combine e+e-, improve information content (y-axis, change colors, etc )
 }
 }
 \end{figure}
