--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -18,7 +18,7 @@
 \usepackage{color}
 
 %% draftwatermark causes infinite loop on SL6's ancient TeXLive
-\usepackage[firstpage]{draftwatermark}
+%\usepackage[firstpage]{draftwatermark}
 \usepackage{lipsum}
 \usepackage{tikz}
 
