Updating beam section

--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -69,7 +69,7 @@ The halo counter is a set of plastic scintillator paddles surrounding the beamli
 
 
 \subsubsection{Beam Rates and Run Plan}
-At the time of this proposal, the beamline design has not been finalized. To estimate the beam rates, we use inputs from a generic target simulation based on 100K 80 GeV $\pi^+$ beam on 15 cm copper target. This $\pi^+$ rate is roughly equivalent to 10\% of a typical SPS spill. The distribution of the tertiary particles from the copper target are shown in Figure~\ref{fig:PionOnCuTarget}. The figure on the left is for postively charged and the figure on the left is for negatively charged tertiary particles.
+At the time of this proposal, the beamline design has not been finalized. To estimate the beam rates, we use inputs from a generic target simulation based on 100K 80 GeV $\pi^+$ beam on 15 cm copper target. This $\pi^+$ rate is roughly equivalent to 10\% of a typical SPS spill. The distribution of the tertiary particles from the copper target are shown in Figure~\ref{fig:PionOnCuTarget}. The figure on the left is for postively charged and the figure on the left is for negatively charged tertiary particles. 
 
 \begin{figure}[h]
   \centering
@@ -78,7 +78,7 @@ At the time of this proposal, the beamline design has not been finalized. To est
 \label{fig:PionOnCuTarget}
 \end{figure}
 
-To formulate a preliminary beam time request, we assume the beam rates and spectrum as given in Figure~\ref{fig:PionOnCuTarget} with some assumptions about efficiencies and acceptances. A preliminary run plan is shown in Table~\ref{tab:RunPlan}. The number of spills needed for each momentum bin is driven by the samples highlighted in red or by the requirement that we collect at least 150 spills per momentum bin. This proposed plan satifies the requested samples as listed in Table~\ref{tab:runsum}, except for Kaons less than 1 GeV. Most low momentum Kaons produced from the secondary target decay before reaching the liquid argon cryostat. To obtain those samples, we will need to carry out extended runs and trigger exclusively on particles tagged as Kaons by either the time-of-flight or the threshold Cherenkov counters.
+To formulate a preliminary beam time request, we assume the hadron beam rates and spectrum to be as given in Figure~\ref{fig:PionOnCuTarget} with some assumptions about efficiencies and acceptances. For the electron sample, we expect a different optimized beamline setup to produce a pure electron beam with a flux of about 200 Hz. A preliminary run plan is shown in Table~\ref{tab:RunPlan}. The number of spills needed for each momentum bin is driven by the samples highlighted in red or by the requirement that we collect at least 150 spills per momentum bin. This proposed plan satifies the requested samples as listed in Table~\ref{tab:runsum}, except for Kaons less than 1 GeV. Most low momentum Kaons produced from the secondary target decay before reaching the liquid argon cryostat. To obtain those samples, we will need to carry out extended runs and trigger exclusively on particles tagged as Kaons by either the time-of-flight or the threshold Cherenkov counters.
 
 \begin{table}[h]
 \centering
@@ -125,5 +125,5 @@ To formulate a preliminary beam time request, we assume the beam rates and spect
 \caption{A preliminary run plan. The number of spills needed for a given momentum bin is driven by the samples highlighted in red or by the requirement of at least 150 spills per momentum bin.}
 \end{table}
 
-In addition to the above samples with beam at the nominal position, we expect to take some additional data with the beam entering the TPC at different position and angles. The total estimated beam time needed to carry out the physics program in this proposal is about 4 to 6 weeks.
+In addition to the above samples with beam at the nominal position, we expect to take some additional data with the beam entering the TPC at different position and angles. Without a detail beamline design, there are still some uncertainties on the actual beam rates. Based on the information that we have, the total estimated beam time needed to carry out the physics program in this proposal is about 4 to 6 weeks.
  
