--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -18,11 +18,11 @@
 \usepackage{color}
 
 %% draftwatermark causes infinite loop on SL6's ancient TeXLive
-%\usepackage[firstpage]{draftwatermark}
+\usepackage[firstpage]{draftwatermark}
 \usepackage{lipsum}
 \usepackage{tikz}
 
-%\usepackage[T1]{fontenc}
+\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{authblk}
 
@@ -45,6 +45,7 @@
 \date{\today}
 \date{April 15, 2015}
 	\input{authors}
+%	\input{150505_DUNE_authors}
 
 \maketitle
 
