--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -45,9 +45,9 @@
 \title{  Proposal for a Full-Scale Detector Engineering Test and Test Beam Calibration of a Single-Phase LAr TPC}
 
 \date{\today}
-\date{April 15, 2015}
+%\date{April 15, 2015}
 	\input{authors}
-%	\input{150505_DUNE_authors}
+%	\input{150506_DUNE_authors}
 
 \maketitle
 
