--- a/cryo.tex
+++ b/cryo.tex
@@ -18,7 +18,7 @@ A membrane cryostat design commonly used for liquefied natural gas (LNG) storage
 Two membrane cryostat vendors are known: GTT (Gaztransport \& Technigaz) from France and IHI (Ishikawajima-Harima Heavy Industries) from Japan. Each one is technically capable of delivering a membrane cryostat that meets the design requirements for this detector. To provide clarity, only one vendor is represented in this document, GTT; this is for informational purposes only. Figure 1 shows a 3D model of the GTT membrane and insulation design.
 
 
-\begin{figure}
+\begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=.9\textwidth]{figures/membrane-exploded-view}
 \caption[Exploded view of the membrane cryostat technology]{\label{fig:lar-org} Exploded view of the membrane cryostat technology}
@@ -36,7 +36,7 @@ The top plate will contain two hatches for the installation of the TPCs; it will
 \end{center}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[htb]
 \begin{center}
 \includegraphics[width=.75\textwidth]{figures/cryostat-isometric-view} 
 \caption[Isometric view of cryostat]{\label{fig:cryostat-views} Isometric view of the membrane cryostat}
@@ -353,7 +353,7 @@ Nominal LAr purification flow rate (filling/ops) & 5.5 day/volume exchange \\ \h
 \end{tabular}
 \end{table}
 
-\begin{figure}
+\begin{figure}[htb]
 \begin{center}
 \includegraphics[width=.75\textwidth]{figures/proposed-LN2-system} 
 \caption[Schematic diagram for the proposed LN2 system]{\label{fig:proposed-LN2-system}Schematic diagram for the proposed LN2 system}
