--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -92,7 +92,7 @@ The proposed single phase liquid argon detector presently described corresponds 
 \section{Calibration}
 	\input{calibration.tex}
 
-\newpage
+%\newpage
 \section{Charged Particle Test Beam Requirements [$\sim$10 pages; {\color{red} Cheng-Ju}]}
 	\input{testbeamreq}
 
