--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -86,7 +86,7 @@ To formulate a preliminary beam time request, we assume the hadron beam rates an
 \begin{tabular}{|c|c|c|c|c|c|c|}
 \hline
 \multicolumn{7}{|c|}{\bf Positive Sample} \\ \hline
-\bf $P$ (GeV) & \bf $\#$ of Spills & \bf Time (hrs) & \bf $\#$ of $\pi^+$ & \bf$\#$ of $\mu^+$ & \bf$\#$ of $K^+$ & \bf$\#$ of Proton \\ \hline  
+\bf $P$ (GeV) & \bf $\#$ of Spills & \bf Time (hrs) & \bf $\#$ of $\pi^+$ & \bf$\#$ of $\mu^+$ & \bf$\#$ of $K^+$ & \bf$\#$ of p \\ \hline  
 \hiderowcolors
 0.2&900 &11&\textcolor{red}{\bf 15K} &180K&$\approx$0&160K\\ 
 0.3&200 &3 &\textcolor{red}{\bf 15K} &30K &$\approx$0&50K \\
