Updating beam section to address T. Kutter's comments

--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -20,7 +20,7 @@
 \usepackage{colortbl}
 
 %% draftwatermark causes infinite loop on SL6's ancient TeXLive
-%\usepackage[firstpage]{draftwatermark}
+\usepackage[firstpage]{draftwatermark}
 \usepackage{lipsum}
 \usepackage{tikz}
 
@@ -89,7 +89,7 @@ The proposed single phase liquid argon detector presently described corresponds 
 	\input{cryo.tex}
 	
 \section{Calibration}
-	\input{calibration.tex}
+	\input{calibration}
 
 \newpage
 \section{Charged Particle Test Beam Requirements [$\sim$10 pages; {\color{red} Cheng-Ju}]}
