Move run plan section out of the beam instrumentation section

--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -68,7 +68,7 @@ The halo counter is a set of plastic scintillator paddles surrounding the beamli
 %This section could be absorbed into the cryostat chapter.
 
 
-\subsubsection{Beam Rates and Run Plan}
+\subsection{Beam Rates and Run Plan}
 At the time of this proposal, the beamline design has not been finalized. To estimate the beam rates, we use inputs from a generic target simulation based on 100K 80 GeV $\pi^+$ beam on 15 cm copper target. This $\pi^+$ rate is roughly equivalent to 10\% of a typical SPS spill. The distributions of the tertiary particles from the copper target are shown in Figure~\ref{fig:PionOnCuTarget}. The figure on the left is for postively charged and the figure on the right is for negatively charged tertiary particles. 
 
 \begin{figure}[tbh]
