--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -46,8 +46,8 @@
 
 \date{\today}
 %\date{April 15, 2015}
-	\input{authors}
-%	\input{150506_DUNE_authors}
+%	\input{authors}
+	\input{150506_v2_DUNE_authors}
 
 \maketitle
 
