--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -127,12 +127,13 @@ from $\nu_e$, $\nu_\mu$, $\bar \nu_e$ and $\bar \nu_\mu$ at the far detector loc
 
 %\newpage
 
-The detector is designed to mimic the current DUNE Far detector design but must be sufficiently large in both
-longitudinal and transverse dimensions to contain showering particles up to the energy range of interest ($\sim$7~GeV).
+The detector is designed from components that match exactly the current DUNE Far detector design components. 
+The test beam detector must be sufficiently large in both
+longitudinal and transverse dimensions to contain showering particles up to the energy range of interest ($\sim$10~GeV).
 Fig.~\ref{fig:containment} shows the simulated longitudinal and transverse 
-energy containment for proton showers up to 10~GeV/c momentum.
-For 10 GeV showers, more than 95\% of the energy is contained in a detector of longitudinal size of 550~cm and 
-radius of 200~cm. Shower from pions, kaons, and electrons have also been studied and better containment
+energy containment for proton showers up to 10~GeV in energy.
+For 10 GeV showers, more than 95\% of the energy is contained in a detector of longitudinal size of 6~m and 
+radius of 2.5~m. Shower from pions, kaons, and electrons have also been studied and better containment
 is achieved in those cases. 
 \begin{figure}[htp]
   \centering
@@ -184,7 +185,7 @@ is achieved in those cases.
 %\label{detbeam_rates}
 %Estimation of  beam particles rates  necessary to collect high enough statistics in a reasonable time to obtain goals of of the measurements.
 % THis should be discussed in the beam section
-\subsubsection {Summary of Beam Particle Requirements}
+\subsection {Summary of Beam Particle Requirements}
 
 Table~\ref{tab:runsum} summarizes the requested particle types and momenta along with 
 required exposures for the test beam program.
