--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -20,7 +20,7 @@
 \usepackage{colortbl}
 
 %% draftwatermark causes infinite loop on SL6's ancient TeXLive
-\usepackage[firstpage]{draftwatermark}
+%\usepackage[firstpage]{draftwatermark}
 \usepackage{lipsum}
 \usepackage{tikz}
 
@@ -52,9 +52,9 @@
 \maketitle
 
 
-\SetWatermarkText{DRAFT}
-\SetWatermarkLightness{0.8}
-\SetWatermarkScale{5}
+%\SetWatermarkText{DRAFT}
+%\SetWatermarkLightness{0.8}
+%\SetWatermarkScale{5}
 
 
 \begin{abstract}
